Cleaning the code

--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
     <script src="https://use.fontawesome.com/releases/v5.0.13/js/fontawesome.js"></script>
 
     <!--Crypto libraries-->
-    <script src="../../js/aes.js"></script>
-    <script src="../../js/angularjs-crypto.js"></script>
-    <script src="../../js/CryptoJSCipher.js"></script>
+    <script src="js/aes.js"></script>
+    <script src="js/angularjs-crypto.js"></script>
+    <script src="js/CryptoJSCipher.js"></script>
 
     <!--CSS-->
     <link rel="stylesheet" href="http://cdn.datatables.net/1.10.7/css/jquery.dataTables.css">
@@ -43,14 +43,14 @@
     <link rel="stylesheet" href="views/site/css/dashboard.css">
     <link rel="stylesheet" href="views/site/css/login.css">
     <link rel="stylesheet" href="views/user/css/profile.css">
-    <link rel="stylesheet" href="../../css/overlay.css">
+    <link rel="stylesheet" href="css/overlay.css">
 
     <!--Controllers-->
-    <script src="../../controllers/control.js"></script>
-    <script src="../../controllers/site.js"></script>
-    <script src="../../controllers/user.js"></script>
-    <script src="../../controllers/service.js"></script>
-    <script src="../../controllers/record.js"></script>
+    <script src="controllers/control.js"></script>
+    <script src="controllers/site.js"></script>
+    <script src="controllers/user.js"></script>
+    <script src="controllers/service.js"></script>
+    <script src="controllers/record.js"></script>
 
 </head>
 
