--- a/index.html
+++ b/index.html
@@ -71,7 +71,9 @@
                 navbar_height = document.querySelector('.navbar').offsetHeight;
                 document.body.style.paddingTop = navbar_height + 'px';
             } else {
-                document.getElementById('navbar_top').classList.remove('fixed-top');
+                if (document.getElementById('navbar_top')) {
+                    document.getElementById('navbar_top').classList.remove('fixed-top');
+                }
                 // remove padding top from body
                 document.body.style.paddingTop = '0';
             }
